apps/hermes-agent/dashboard/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: hermes-agent-dashboard
spec:
  ports:
    - name: http
      port: 9119
      targetPort: http
    - name: metrics
      port: 9119
      targetPort: http
  selector:
    app.kubernetes.io/instance: hermes-agent-dashboard
    app.kubernetes.io/name: hermes-agent
