apps/hermes-agent/dashboard/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: automata-dashboard
spec:
  defaultBackend:
    service:
      name: hermes-agent-dashboard
      port:
        name: http
  tls:
    - hosts:
        - automata-dashboard
